--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "The sequel to IguaRPG",
   "scripts": {
-    "serve": "parcel --open"
+    "serve": "parcel --open",
+    "test": "ts-node test/run.ts"
   },
   "targets": {
     "default": {
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@hubol/smooch": "file:smooch.tgz",
     "parcel": "^2.10.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
