--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "SEE LICENSE IN README.md",
   "devDependencies": {
     "@hubol/smooch": "file:smooch.tgz",
+    "@types/node": "^20.8.8",
     "parcel": "^2.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
