--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The sequel to IguaRPG",
   "scripts": {
     "serve": "parcel --open",
-    "test": "ts-node test/run.ts"
+    "test": "ts-node test/run.ts",
+    "test:watch": "nodemon --watch src --watch test -e ts,js,json -x npm run test"
   },
   "targets": {
     "default": {
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@hubol/smooch": "file:smooch.tgz",
     "@types/node": "^20.8.8",
+    "nodemon": "^3.0.1",
     "parcel": "^2.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
