--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Hubol",
   "license": "SEE LICENSE IN README.md",
   "devDependencies": {
-    "@hubol/smooch": "file:smooch.tgz",
+    "@hubol/smooch": "^1.0.0-beta.4",
     "@types/node": "^20.8.8",
     "nodemon": "^3.0.1",
     "parcel": "^2.10.0",
