--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/node": "^20.8.8",
     "nodemon": "^3.0.1",
     "parcel": "^2.10.0",
+    "process": "^0.11.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "pixi.js": "^7.3.1"
+    "pixi.js": "^7.3.1",
+    "unzipit": "^1.4.3"
   }
 }
