First pass at continuous deployment

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "The sequel to IguaRPG",
   "scripts": {
+    "build": "parcel build",
     "serve": "parcel --open",
     "test": "ts-node --transpileOnly test/run.ts",
     "test:watch": "nodemon --watch src --watch test -e ts,js,json -x npm run test"
