Checkout with LFS

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,6 +18,7 @@ jobs:
             package-lock.json
             package.json
             tsconfig.json
+          lfs: true
 
       - uses: actions/setup-node@v4
         with:
