--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,8 +13,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: |
+            public
             src
-            .parcelrc
+            esbuild.mjs
             package-lock.json
             package.json
             tsconfig.json
@@ -31,7 +32,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: build
-          path: dist
+          path: public
   
   deploy-heroku:
     needs: build
