Implement naive cache-busting

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: build
-          path: public
+          path: dist
   
   deploy-heroku:
     needs: build
