--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hubol/smooch": "^1.0.0-beta.7",
     "@types/node": "^20.8.8",
     "esbuild": "0.19.8",
+    "esbuild-plugin-import-glob": "^0.1.1",
     "nodemon": "^3.0.1",
     "process": "^0.11.10",
     "ts-node": "^10.9.1",
