--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -48,9 +48,8 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_email: hubol.gordon@gmail.com
           justlogin: true
-      - run: >
-          heroku plugins:install heroku-repo &&
-          heroku repo:reset -a igua-rpg2
+      - run: heroku plugins:install heroku-repo
+      - run: heroku repo:reset -a igua-rpg2
       - run: >
           git init &&
           heroku git:remote -a igua-rpg2
