Check out tools/

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,6 +15,7 @@ jobs:
           sparse-checkout: |
             public
             src
+            tools
             esbuild.mjs
             package-lock.json
             package.json
