--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@hubol/smooch": "^1.0.0-beta.7",
     "@types/node": "^20.8.8",
+    "@types/wicg-file-system-access": "^2023.10.5",
     "esbuild": "0.19.8",
     "esbuild-plugin-import-glob": "^0.1.1",
     "nodemon": "^3.0.1",
