--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "patch": "npm run tool -- patch-dependencies",
     "serve": "node esbuild.mjs serve",
     "test": "tsx test/run.ts",
-    "test:watch": "nodemon --watch src --watch test -e ts,js,json -x npm run test",
+    "test:watch": "npm run tool -- run-tests-in-watch-mode",
     "tool": "tsx tools/run-tool.ts"
   },
   "author": "Hubol",
