--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -3,5 +3,5 @@
         "esModuleInterop": true,
         "types": [ "node" ]
     },
-    "include": [ "../test/", "lib/normalize-windows-path-separator.ts" ]
+    "include": [ "./" ]
 }
