--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,7 +37,8 @@ jobs:
   
   deploy-heroku:
     needs: build
-    runs-on: ubuntu-latest
+    # https://github.com/AkhileshNS/heroku-deploy/issues/186#issuecomment-2539751825
+    runs-on: ubuntu-22.04
     env:
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
     steps:
