--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,6 @@
 
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.ZIP filter=lfs diff=lfs merge=lfs -text
+
+*.pdn filter=lfs diff=lfs merge=lfs -text
+*.PDN filter=lfs diff=lfs merge=lfs -text
